--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "william Koller",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "morgan": "^1.9.1"
     },
