--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bcrypt": "^3.0.8",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
         "mysql": "^2.18.1"
