--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "husky": "^4.2.3",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
