--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged",
+      "pre-push": "pretty-quick --staged"
     }
   },
   "keywords": [
