--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rest-api",
-  "version": "1.0.0",
+  "name": "rest",
+  "version": "1.1.0",
   "description": "Rest API node.js, express",
   "main": "index.js",
   "scripts": {
