--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "rest",
-  "version": "1.0.1",
-  "description": "Rest API node.js, express",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
-  },
-  "keywords": [
-    "node",
-    "express"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
-  "author": "william Koller",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^3.0.8",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1"
-  },
-  "devDependencies": {
-    "husky": "^4.2.3",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^1.5.1"
-  }
+	"name": "rest",
+	"version": "1.0.1",
+	"description": "Rest API node.js, express",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon server.js"
+	},
+	"keywords": [
+		"node",
+		"express"
+	],
+	"author": "william Koller",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^3.0.8",
+		"body-parser": "^1.19.0",
+		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"morgan": "^1.9.1",
+		"multer": "^1.4.2",
+		"mysql": "^2.18.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.2"
+	}
 }
