chore: update dependencies

--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
 	"description": "Rest API node.js, express",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon server.js"
+		"dev": "nodemon server.js",
+		"check": "npm-check -s -u"
 	},
 	"keywords": [
 		"node",
@@ -13,13 +14,14 @@
 	"author": "william Koller",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^3.0.8",
+		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.9.1",
 		"multer": "^1.4.2",
-		"mysql": "^2.18.1"
+		"mysql": "^2.18.1",
+		"npm-check": "^5.9.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2"
